# Backend

./: .gitignore  README.md  background_large.sh  background_medium.sh  background_small.sh  config.yaml  pyproject.toml
api/: image.py  main.py  mandelbrot.py
api/Fortran/: f2py.sh  f90wrap_mandelbrot.f90  mandelbrot.mod  mandelbrot.py
scripts/: background_large_01.sh  background_large_02.sh  background_large_03.sh  background_large_04.sh  background_large_05.sh  background_large_06.sh  background_medium_01.sh  background_medium_02.sh  background_medium_03.sh  background_medium_04.sh  background_medium_05.sh  background_medium_06.sh  background_small_01.sh  background_small_02.sh  background_small_03.sh  background_small_04.sh  background_small_05.sh  background_small_06.sh
scripts/iphone/: background_01.sh  background_02.sh  background_03.sh  background_04.sh  background_05.sh  background_06.sh
scripts/macbook/: background_01.sh  background_02.sh  background_03.sh  background_04.sh  background_05.sh  background_06.sh
scripts/ultrawide/: background_01.sh  background_02.sh  background_03.sh  background_04.sh  background_05.sh  background_06.sh
static/: logic.js
templates/: base.html  index.html
