[tool.poetry]
name = "dynamic"
version = "0.1.0"
description = "Backend example with fastapi"
authors = ["Alexander Mead <alexander@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.92.0"
Jinja2 = "^3.1.2"
numpy = "^1.24.2"
uvicorn = "^0.20.0"
pydantic = { version = "^1.10.5", extras = ["dotenv"] }
matplotlib = "^3.7.0"
hydra-core = "^1.3.2"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
